Unity/Assets/akanevrc/TeuchiUdon/Tests/src/Exprs/EvalRefMethod3.teuchi
// error
mut x = 0;
int.TryParse("100", x);
UnityEngine.Debug.Log(x);
